--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ a.wowhead del {
 /* Raid Selection Buttons (MSV/HoF/ToES) */
 #raid-buttons-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(80px,1fr));
   gap: 0.75rem;
   align-items: start;
   width: 100%;
