--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   margin: 0;
   padding: 0;
+  scrollbar-gutter: stable; 
 }
 /* =================================================================
    Theme Variables
